# redpipy

./: pyproject.toml
csrc/: _template.tmpl  constants.py  convert.py
csrc/sources/: curl_all.sh  sha.txt
src/redpipy/: __init__.py  analog.py  common.py  osci.py  osci_axi.py
src/redpipy/rpwrap/: acq.py  acq_axi.py  constants.py  gen.py  rp.py
