[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "redpipy"
authors = [
    {name="Hernan E. Grecco", email="hernan.grecco@gmail.com"},
    {name="Tomas Di Napoli", email="tomas.dina98@gmail.com"},
]
description = "Useful functions, classes and tools for handling and interacting with dataframes."
requires-python = ">=3.10"
keywords = [
]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["dependencies", "optional-dependencies", "version"]

[tool.setuptools.package-data]
redpipy = ["py.typed"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
optional-dependencies.test = {file = "requirements.test.txt"}
optional-dependencies.generate = {file = "requirements.generate.txt"}

[project.urls]
"Homepage" = "https://github.com/hgrecco/redpipy"
"Bug Tracker" = "https://github.com/hgrecco/redpipy/issues"

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --doctest-modules"
pythonpath = "src"

[tool.ruff]
extend-include = ["*.ipynb"]
exclude = ["csrc/sources"]
extend-exclude = ["build"]
line-length=88

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
known-first-party= ["redpipy"]

[tool.ruff.lint]
extend-select = [
  "I",           # isort
]
ignore = [
  # whitespace before ':' - doesn't work well with black
  # "E203",
  "E402",
  # line too long - let black worry about that
  "E501",
  # do not assign a lambda expression, use a def
  "E731",
  # line break before binary operator
  # "W503"
]
